--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,2 @@
-<h1>Howdy</h1>
+<h1>Hello!</h1>
+<p>Please come back in 2 weeks.  I will be in a much nicer state then. If you really can't wait, try again in three days.</p>
