Root component hooked onto DOM

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,2 +1,4 @@
-<h1>Hello!</h1>
-<p>Please come back in 2 weeks.  I will be in a much nicer state then. If you really can't wait, try again in three days.</p>
+<div id="root">
+  <h1>Hello!</h1>
+  <p>Please come back in 2 weeks.  I will be in a much nicer state then. If you really can't wait, try again in three days.</p>
+</div>
