--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,7 +80,7 @@
      font-size: 10px;
    }
 
-   .sign-up > button {
+   .sign-up  button {
      padding: 5px 15px;
      background: #382110;
      color: #fff;
@@ -88,7 +88,7 @@
      margin-left: 10px;
    }
 
-   .sign-up > button:hover {
+   .sign-up  button:hover {
      cursor: pointer;
      background: #58371F;
    }
@@ -100,23 +100,39 @@
    border: solid 1px #d0d0c8;
    background-color: #fff;
    box-shadow: 0px 1px 1px #d0d0c8;
-    padding: 28px 10px 34px 10px;
-    width: 600px;
-    margin: 0 auto;
-    text-align: center;
+  padding: 28px 10px 34px 10px;
+  width: 620px;
+  margin: 0 auto;
+  text-align: center;
 
  }
 
+  .authFormFields {
+    width: 350px;
+    margin: 0 auto;
+  }
 
 /*Splash*/
 
-  .authForm .label {
+  .authForm label {
     font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-align: left;
     color: #333;
     font-weight: bold;
     width: 100%;
     display: block;
+    font-weight: normal;
+    font-size: 10px;
+  }
+
+  .authForm input {
+    font-weight: normal;
+    font-size: 10px;
+    display: block;
+    width: 150px;
+    padding: 5px 0;
+    border: 1px solid darkgrey;
+    border-radius: 3px;
   }
 
   .authForm button {
@@ -126,9 +142,11 @@
     color: #333;
     background-color: #F4F1EA;
     border-radius: 3px;
-    padding: 12px 24px;
-    font-size: 16;
+    padding: 10px;
+    font-size: 10px;
     display: inline-block;
+    border: 1px solid darkgrey;
+    margin; 10px 10px 10px 0;
   }
 
 
