Fix typo in css file

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -149,7 +149,7 @@
     font-size: 10px;
     display: inline-block;
     border: 1px solid darkgrey;
-    margin; 10px 10px 10px 0;
+    margin: 10px 10px 10px 0;
   }
 
 
