--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,7 +38,7 @@
     display: block;
     width: 100%;
     margin-bottom: 16px;
-    background: image-url('splash-background.jpg');
+    background: image-url('/images/backgrounds/splash-background.jpg');
   }
 
    .header-logo a {
