--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title>Goodbooks</title>
     <%= Gon::Base.render_data %>
     <%= csrf_meta_tags %>
+    <script type="text/javascript">
+    </script>
 
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
