Style auth components and clear errors on unmount

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,7 +46,7 @@
    .header-logo a {
      float: left;
      font-family: helvetica;
-     font-size: 20px;
+     font-size: 30px;
      padding: 5px 15px;
      color: #382110;
    }
@@ -80,17 +80,18 @@
 
    .header-button {
      float: right;
-     margin: 10px 15px;
-     font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
-     font-size: 10px;
+     margin: 12px 16px 0 0;
+     font-family: "Lato", "Helvetica Neue", "Helvetica";
+     font-size: 12px;
    }
 
    .header-button  button {
-     padding: 5px 15px;
+     padding: 8px 12px;
      background: #382110;
      color: #fff;
      border-radius: 3px;
      margin-left: 10px;
+     font-size: 13px;
    }
 
    .header-button  button:hover {
