--- a/app/assets/stylesheets/headers.scss
+++ b/app/assets/stylesheets/headers.scss
@@ -4,6 +4,15 @@
     display: block;
     width: 100%;
     background: image-url('splash-background.jpg');
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    // position: fixed;
+    height: 50px;
+  }
+
+  .headerSpacer {
+    height: 300px;
+    width: 100%;
+    display: block;
   }
 
    .header-logo a {
