--- a/app/assets/stylesheets/shelves.scss
+++ b/app/assets/stylesheets/shelves.scss
@@ -33,8 +33,15 @@
   font-size: 10px;
 }
 
+.miniCreateShelf:hover {
+  background: image-url('splash-background.jpg');
+}
+
 .CreateShelfForm input {
   border: 1px solid #D6D0C4;
   border-radius: 3px;
   margin-right: 15px;
+  padding: 2px;
+  font-size: 11px;
+  background: #fff;
 }
