Link shelfIndexItems to shelf detail view

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,17 +8,17 @@
 
 .userMain {
   margin: 0 auto;
-  width: 780px;
+  width: 900px;
 }
 
 .userHomeAside {
   float: left;
-  margin-right: 40px;
+  // margin-right: 40px;
   width: 300px;
 }
 
 .userHomeContent {
-  float: right;
-  margin-left: 40px;
+  float: left;
+  // margin-left: 40px;
   width: 440px;
 }
