Attach images to users through AWS and Paperclip with default

--- a/app/assets/stylesheets/headers.scss
+++ b/app/assets/stylesheets/headers.scss
@@ -70,3 +70,13 @@
      cursor: pointer;
      background: #58371F;
    }
+
+   .userIcon {
+     width: 30px;
+     height: 30px;
+   }
+
+  //  .iconDropdown{
+  //    height: 100%;
+  //    width: auto;
+  //  }
