--- a/app/assets/stylesheets/headers.scss
+++ b/app/assets/stylesheets/headers.scss
@@ -57,6 +57,13 @@
      font-size: 12px;
    }
 
+   .header-icon {
+     float: right;
+     margin: 0 6px 0 0;
+     font-family: "Lato", "Helvetica Neue", "Helvetica";
+     font-size: 12px;
+   }
+
    .header-button  button {
      padding: 8px 12px;
      background: #382110;
@@ -66,14 +73,28 @@
      font-size: 13px;
    }
 
+   .header-icon button {
+     padding: 8px 12px;
+     color: #fff;
+     margin-left: 10px;
+     font-size: 13px;
+   }
+
+   .header-icon button:hover {
+     cursor: pointer;
+     background: #58371F;
+   }
+
    .header-button  button:hover {
      cursor: pointer;
      background: #58371F;
    }
 
    .userIcon {
-     width: 30px;
-     height: 30px;
+     width: 40px;
+     height: 40px;
+     object-fit: cover;
+     border-radius: 50%;
    }
 
   //  .iconDropdown{
