--- a/app/assets/stylesheets/headers.scss
+++ b/app/assets/stylesheets/headers.scss
@@ -7,6 +7,7 @@
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
     // position: fixed;
     height: 50px;
+    max-height: 50px;
   }
 
   .headerSpacer {
@@ -57,20 +58,35 @@
      font-size: 12px;
    }
 
-   .header-icon {
-     float: right;
-     margin: 0 6px 0 0;
-     font-family: "Lato", "Helvetica Neue", "Helvetica";
-     font-size: 12px;
+   .header-button a {
+     text-decoration: none;
+     float:left
    }
 
-   .header-button  button {
+   .topRightText {
+     margin-top: 9px;
+     float: left;
+   }
+
+   .header-button button {
      padding: 8px 12px;
      background: #382110;
      color: #fff;
      border-radius: 3px;
      margin-left: 10px;
      font-size: 13px;
+   }
+
+   .header-button button:hover {
+     cursor: pointer;
+     background: #58371F;
+   }
+
+   .header-icon {
+     float: right;
+     margin: 0 6px 0 0;
+     font-family: "Lato", "Helvetica Neue", "Helvetica";
+     font-size: 12px;
    }
 
    .header-icon button {
@@ -85,19 +101,47 @@
      background: #58371F;
    }
 
-   .header-button  button:hover {
-     cursor: pointer;
-     background: #58371F;
+   .loggedInHeader-icon {
+     float: right;
+     margin: 0 6px 0 0;
+     font-family: "Lato", "Helvetica Neue", "Helvetica";
+     font-size: 12px;
    }
 
-   .userIcon {
-     width: 40px;
-     height: 40px;
-     object-fit: cover;
-     border-radius: 50%;
+   .loggedInHeader-icon img {
+     padding: 8px 12px;
+     margin-left: 10px;
    }
 
-  //  .iconDropdown{
-  //    height: 100%;
-  //    width: auto;
-  //  }
+   .loggedInHeader-icon:hover {
+      background: #382110;
+   }
+
+  .loggedInHeader-icon:hover .dropDown{
+    display: block;
+    overflow: visible;
+    background: #fff;
+  }
+
+  .loggedInHeader-icon:hover .dropDown a{
+    padding: 3px 4px;
+    width: 240px;
+  }
+
+
+  .drowDown a:hover {
+    text-decoration: underline;
+  }
+
+  .dropDown {
+    display: none;
+    position: absolute;
+    top: 55px;
+  }
+
+  .userIcon {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
