--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
  */
 
  header, body, form, label, input,
- button, p, h1, header, nav, a, button, ul, li{
+ button, p, h1, header, nav, a, button, ul, li, h3{
    padding: 0;
    border: 0;
    margin: 0;
