--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -15,12 +15,28 @@
 
 .userHomeAside {
   float: left;
-  // margin-right: 40px;
   width: 200px;
+
 }
 
 .userHomeContent {
   float: left;
   // margin-left: 40px;
   width: 440px;
+  border-left: 1px solid #EBE8D5;
+}
+
+.userMainNav {
+  border-bottom: 1px solid #EBE8D5;
+  width: 960px;
+  margin-bottom: 20px;
+}
+
+.userMainNav a {
+  color: #00635d;
+  padding: 20px 10px;
+  text-decoration: none;
+  font-size: 20px;
+  font-family: "Merriweather", Georgia, "Times New Roman", serif;
+  font-weight: bold;
 }
