--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -21,7 +21,7 @@
 
 .userHomeContent {
   float: left;
-  // margin-left: 40px;
+  padding-left: 20px;
   width: 440px;
   border-left: 1px solid #EBE8D5;
 }
