--- a/app/assets/stylesheets/booksIndex.scss
+++ b/app/assets/stylesheets/booksIndex.scss
@@ -1,3 +1,13 @@
+.booksIndex{
+  width: 900px;
+  background: #fff;
+}
+
+.booksIndexHeader {
+  margin-top: 5px;
+  border-bottom: solid 2px #F4F4EA;
+}
+
 .booksIndexHeader > li {
   float: left;
   padding: 12px 5px 5px 0;
@@ -6,14 +16,9 @@
   font-weight: bold;
 }
 
-.booksIndexHeader {
-  border-bottom: solid 2px #F4F4EA;
-}
-
-.booksIndex{
-  width: 900px;
-  margin-top: 40px;
-  background: #fff;
+.bookIndexItem {
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgb(238, 238, 238);
 }
 
 .bookIndexItem > li {
@@ -22,19 +27,28 @@
   overflow-wrap: break-word;
 }
 
-.cover-image-col-header {
-  width: 250px;
+.bookIndexItem > li > a {
+  color: rgb(0, 99, 93);
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.cover-col-header {
+  width: 51px;
 }
 
 .cover-col {
-  width: 50px;
-  height: 80px;
-  overflow: hidden;
+  width: 51px;
 }
 
-.cover-col > image {
+.cover-col > a {
   width: 50px;
   height: 80px;
+}
+
+.cover-col > a > img {
+  width: 100%;
+  height: 100%;
 }
 
 .title-col {
