--- a/app/assets/stylesheets/shelf_details.scss
+++ b/app/assets/stylesheets/shelf_details.scss
@@ -38,6 +38,16 @@
   width: 51px;
 }
 
+.cover-col > a {
+  width: 50px;
+  height: 80px;
+}
+
+.cover-col > a > img {
+  width: 100%;
+  height: 100%;
+}
+
 .cover-col-header {
   width: 51px;
 }
