fixed data formatting errors throughout that led components not to update properly

--- a/app/assets/stylesheets/headers.scss
+++ b/app/assets/stylesheets/headers.scss
@@ -183,7 +183,7 @@
   }
 
 // this stopped working when dropdown was positioned absolutely
-  .drowDown a:hover {
+  .drowDown:hover a:hover {
     text-decoration: underline;
   }
 
