style book detail

--- a/app/assets/stylesheets/api/bookDetais.scss
+++ b/app/assets/stylesheets/api/bookDetais.scss
@@ -42,4 +42,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 18px;
   margin-top: 15px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #EBE8D5;
 }
