--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -35,6 +35,48 @@
   margin-top: 5px;
 }
 
+.createReviewForm {
+  border-bottom: solid 1px #EBE8D5;
+  padding-bottom: 10px;
+
+}
+
+.createReviewForm button {
+  line-height: 1;
+  cursor: pointer;
+  text-decoration: none;
+  border: 1px solid #D6D0C4;
+  border-radius: 3px;
+  background-color: #F4F1EA;
+  color: #333333;
+  display: inline-block;
+  padding: 4px;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.createReviewForm button:hover {
+  background: image-url('splash-background.jpg');
+}
+
+.createReviewTitle > * {
+  float: left;
+  margin-right: 10px;
+}
+
+.createReviewForm input {
+  border: 1px solid #D6D0C4;
+  border-radius: 3px;
+  padding: 2px;
+  font-size: 11px;
+}
+
+#CreateReivewTextArea {
+  width: 500px;
+  height: 200px;
+
+}
+
 .UpdateShelvesForm button:hover {
   background: image-url('splash-background.jpg');
 }
