--- a/app/assets/stylesheets/api/bookDetais.scss
+++ b/app/assets/stylesheets/api/bookDetais.scss
@@ -54,3 +54,28 @@
 .MyReview {
   border-bottom: 1px solid #EBE8D5;
 }
+
+.MyReviewHeader > * {
+  float: left;
+}
+
+.MyReviewHeader > button {
+  margin-top: 15px;
+  margin-left: 5px;
+}
+
+.displayReview {
+  cursor: pointer;
+  text-decoration: none;
+  border: 1px solid #D6D0C4;
+  border-radius: 3px;
+  background-color: #F4F1EA;
+  color: #333333;
+  display: inline-block;
+  padding: 4px;
+  font-size: 14px;
+}
+
+.displayReview:hover {
+  background: image-url('splash-background.jpg');
+}
