--- a/app/assets/stylesheets/bookDetais.scss
+++ b/app/assets/stylesheets/bookDetais.scss
@@ -85,6 +85,21 @@
   font-size: 14px;
 }
 
+.BookDetaildisplayReview {
+  cursor: pointer;
+  text-decoration: none;
+  border: 1px solid #D6D0C4;
+  border-radius: 3px;
+  background-color: #F4F1EA;
+  color: #333333;
+  display: inline-block;
+  padding: 4px;
+  font-size: 12px;
+  margin-right: 175px;
+  margin-bottom: 20px;
+  margin-left: 5px;
+}
+
 .updateShelvesList {
   float: left;
 }
