Add styling to forms and buttons

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -93,7 +93,6 @@ form.UpdateShelvesForm {
   margin: 0;
 }
 
-
 .readStatusForm button {
  line-height: 1;
  cursor: pointer;
@@ -105,7 +104,7 @@ form.UpdateShelvesForm {
  display: inline-block;
  padding: 4px;
  font-size: 12px;
- margin-top: 5px;
+ margin-bottom: 5px;
 }
 
 .readStatusForm button:hover {
