--- a/app/assets/stylesheets/bookDetais.scss
+++ b/app/assets/stylesheets/bookDetais.scss
@@ -95,14 +95,32 @@
   display: inline-block;
   padding: 4px;
   font-size: 12px;
-  margin-right: 175px;
+  margin-right: 80px;
   margin-bottom: 20px;
   margin-left: 5px;
+  float: left;
+
 }
 
 .updateShelvesList {
   float: left;
+  width: 180;
 }
+
+.updateShelvesList > h4 {
+  width: 100px;
+  display: inline;
+}
+
+#BookDetailUpdateShelvesListMyShelvesHeader {
+  width: 180px;
+  display: inline-block;
+}
+
+.ReadStatusList {
+  float: right;
+}
+
 
 .displayReview:hover {
   background: image-url('splash-background.jpg');
