Add styling to shelves list

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -81,6 +81,15 @@
   background: image-url('splash-background.jpg');
 }
 
+a.shelfListLink {
+  font-size: 14px;
+  text-decoration: none;
+  color: #00635d;
+  margin: 5px 0;
+}
+
+
+
 form.readStatusForm {
   float: left;
   width: 100px;
